<resources>
    <string name="app_name">DCComics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="superman">Superman</string>
    <string name="nombre">Clark Kent</string>
    <string name="poderes">Super fueza, vuelo, invulnerabilidad, super velocidad,vision con calor, congelar</string>
    <string name="registro">Registro de un Superheroe</string>
    <string name="registrar">Registrar</string>
    <string name="name">Nombre</string>
    <string name="poder">Poderes:</string>
    <string name="estatura">Estatura</string>
    <string name="info">\"Nombre: %s,\n estatura %f,\n género %s, \n poderes: %s, \n ciudad: %s"</string>
    <string name="genero">Género</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="superfuerza">Super Fuerza</string>
    <string name="velocidad">Super Velocidad</string>
    <string name="telequinesis">Telequinesis</string>
    <string name="ciudad_nacimiento">Ciudad de Nacimiento</string>
    <string name="alias">Alias:</string>
    <string name="ciudad">Ciudad</string>
    <string name="metropolis">Metropolis</string>
    <string name="ocupation">Ocupation:</string>
    <string name="reportero">Reportero</string>
    <string name="height">Altura:</string>
    <string name="alto">1.85</string>
    <string name="facebook">Facebook:</string>
    <string name="face">facebook.com/superman</string>

    <string-array name="Lista_ciudades">
        <item>Ciudad Central</item>
        <item>Ciudad Gótica</item>
        <item>Temiscira</item>
        <item>Metrópolis</item>

    </string-array>

</resources>